--- a/CSS/layout-home.css
+++ b/CSS/layout-home.css
@@ -63,7 +63,8 @@
     font-size: 16px;
     align-items: center;
     justify-content: center;
-    bottom: 920px;
+    bottom: 875px;
+    left: 63px;
 }
 
 /*Subposts*/
